# user-model-distiller

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-pr.yml  ci.yml  codeql.yml  release.yml
docs/: github-hardening.md  threat-model.md
docs/weekly-reviews/: 2026-07-21.md
skills/user-model-distiller/: SKILL.md
skills/user-model-distiller/agents/: openai.yaml
skills/user-model-distiller/references/: continuous-memory.md  evaluation.md  profile-schema.md  security-and-privacy.md
skills/user-model-distiller/scripts/: collect_evidence.py  distill_workflow.py  evaluate_detector.py  memory_control.py  normalize_sessions.py  prepare_review_pack.py  privacy_guard.py  profile_tool.py
tests/: test_evaluate_detector.py  test_memory_control.py  test_prepare_review_pack.py  test_privacy_guard.py  test_profile_lifecycle.py  test_release_builder.py  test_scripts.py  test_workflow.py
tests/fixtures/: synthetic-chat.json
tools/: build_release.py  check_repository.py  skill_bundle.py
