[project]
name = "user-model-distiller"
version = "0.2.3"
description = "Local-first, reviewable preference distillation for authorized chat histories"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "jacky-0218-lung" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/jacky-0218-lung/user-model-distiller"
Issues = "https://github.com/jacky-0218-lung/user-model-distiller/issues"
Security = "https://github.com/jacky-0218-lung/user-model-distiller/security"
